# Hidey-Chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ReadMe.txt  SDLevents.cpp  SDLevents.h  array.h  autoexec.dl  basicVisuals.cpp  basicVisuals.h  board.cpp  board.h  config.dl  controller.cpp  controller.h  duck-lisp.cpp  duck-lisp.hpp  gui.dl  gui.h  log.cpp  log.h  main.cpp  piece.cpp  piece.h  settings.cpp  settings.h  settings.md  types.h
core/: SDLevents.h  defer.hpp  duck-lisp.cpp  duck-lisp.hpp  file_utilities.cpp  gui.cpp  log.cpp  log.h  render_window.cpp  repl.cpp  scripting.cpp  scripting.hpp  settings.h
core/game_model/: board.cpp
docs/: configuration.md  scripting.md  settings-dev.md  settings.md
include/: duck-lisp.hpp  file_utilities.hpp  gui.hpp  macros.hpp  piece.h  render_window.hpp  repl.hpp  scripting.hpp  settings.h
include/game_model/: board.hpp
old_stuff/: SDLevents.cpp  basicVisuals.h  button_code.txt
res/chess/scripts/: library.dl  main.dl
scripts/: autoexec.dl  config.dl  gui-boilerplate.dl  gui.dl  library.dl
tests/: CMakeLists.txt  btesting.cpp  jtesting.cpp
